<resources>
    <string name="app_name">Diccionario Inglés</string>
    <string name="boton_anadir_palabra">Añadir Palabra</string>
    <string name="boton_volver">Volver</string>
    <string name="titulo_anadir_palabras">Escribe una palabra en español y su traduccion al inglés para introducirla al Diccionario</string>
    <string name="boton_comprobar">Comprobar</string>
    <string name="titulo_mainactivity">Traduce esta palabra: </string>
    <string name="boton_mostrar_palabra">Mostrar Palabra</string>
    <string name="boton_introducir_palabras">Introducir Palabras</string>
    <string name="descripcion_imageCheck">Mostrara una imagen check si se acierta o una cruz si es erronea la respuesta</string>
    <string name="pista_palabra_esp">Palabra en Español</string>
    <string name="pista_palabra_eng">Palabra en Inglés</string>
    <string name="segundo_fallo">¡Has fallado otra vez, tendrás otra oportunidad mas adelante</string>
    <string name="primer_fallo">¡Has Fallado, prueba otra vez!</string>
    <string name="acierto">¡Has acertado!</string>
    <string name="diccionario_vacio">Diccionario vacio, introduce alguna palabra dandole al boton Añadir Palabras</string>
    <string name="pulsa_mostrarPalabra">Debes pulsar el boton Mostrar Palabra para jugar</string>
    <string name="introduce_palabraIngles">Debes introducir primero una palabra en inglés para poder comprobarla</string>
    <string name="error_anadir_palabras">Debes introducir una palabra tanto en Inglés como en Español</string>
    <string name="no_palabras_categoria">No hay ninguna palabra en la categoria: </string>
    <string name="fast_input_label" />
    <string name="IME_Settings" />
    <string name="fast_input_settings">Configuracion IME</string>
    <string name="AnadirPalabras_PalabrasVacio">Debes introducir una palabra tanto en Español como en Inglés</string>
    <string name="AnadirPalabras_NoCategorias">Primero debes crear una categoria</string>


</resources>
