<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_anadir_palabras"
    tools:context=".ActivityAnadirPalabras">

    <TextView
        android:id="@+id/MostrarTituloAnadirP"
        android:layout_width="365dp"
        android:layout_height="83dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:text="@string/titulo_anadir_palabras"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEsp"
        android:layout_width="171dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pista_palabra_esp"
        android:inputType="textPersonName"
        android:textColor="#3461BF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorias" />

    <EditText
        android:id="@+id/editTextIngles"
        android:layout_width="164dp"
        android:layout_height="48dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/pista_palabra_eng"
        android:inputType="textPersonName"
        android:textColor="#3461BF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEsp" />

    <Button
        android:id="@+id/botonAddPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:onClick="IntroducirPalabrasDiccionario"
        android:text="@string/boton_anadir_palabra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIngles" />

    <Button
        android:id="@+id/BotonVolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:onClick="volverAtras"

        android:text="@string/boton_volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/mensajePalabraAnadida"
        style="@style/textview"
        android:layout_width="341dp"
        android:layout_height="140dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonAddPalabra" />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MostrarTituloAnadirP"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="cargarActividadCrearCategoria"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerCategorias"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategorias"
        app:layout_constraintTop_toTopOf="@+id/spinnerCategorias"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/icono_android_categoria"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>